tests/examples/bad/class_self_keyword_override_03.lat
int main() {
    return 0;
}
 
class A {
    int a;
    int f(int self) {return 0;}
}

